# smart_pointers_mephi

./: CMakeLists.txt
src/: main.cpp  smart_ptrs.h
tests/: memory_checker.cpp  memory_checker.h  smart_ptrs_tests.cpp  smart_ptrs_tests.h  test_structure.h
ui/: MainWindow.cpp
